--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
   <script src="https://js.braintreegateway.com/web/dropin/1.31.2/js/dropin.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
